# rr-gs-test

./: .gitignore  pyproject.toml
src/rr_gs_test/: __init__.py  gaussians3d.py  log_chair.py
src/rr_gs_test/api/: view_any_splat.py  view_splat_with_cams.py
tools/: view_any_splat.py  view_splat_with_cams.py
