[project]
authors = [{ name = "Pablo Vela", email = "pablovela5620@gmail.com" }]
dependencies = []
name = "rr-gs-test"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["https://prefix.dev/ai-demos", "conda-forge"]
platforms = ["osx-arm64", "linux-aarch64"]

[tool.pixi.dependencies]
av = "*"
python = "==3.12"
numpy = ">=2.0,<3"
jaxtyping = ">=0.2.36,<0.3.0"
pyserde = ">=0.20.0,<0.30"
typing_extensions = ">=4.1.0,<4.13.0"
rerun-gs-viewer = "==0.30.2"
beartype = ">=0.22.9,<0.23"
tyro = ">=0.9.1,<0.10"
huggingface_hub = ">=1.6.0,<2"


[tool.pixi.pypi-dependencies]
rr_gs_test = { path = ".", editable = true }
plyfile = ">=1.1,<2"
rerun-sdk = "==0.30.2"
simplecv = { git = "https://github.com/pablovela5620/simplecv", rev = "v0.7.2" }

[tool.pixi.tasks._download_chair_data]
cmd = "test -f data/chair/chair.zip || hf download pablovela5620/splat-dataset chair.zip --repo-type dataset --local-dir data/chair/"
outputs = ["data/chair/chair.zip"]

[tool.pixi.tasks._unzip_chair_data]
cmd = "test -f data/chair/transforms_train.json || unzip -o data/chair/chair.zip -d data/"
depends-on = ["_download_chair_data"]
inputs = ["data/chair/chair.zip"]
outputs = [
    "data/chair/transforms_train.json",
    "data/chair/transforms_val.json",
    "data/chair/train/*.png",
    "data/chair/val/*.png",
]

[tool.pixi.tasks._download_chair_ply]
cmd = "test -f data/chair/chair.ply || hf download pablovela5620/splat-dataset chair.ply --repo-type dataset --local-dir data/chair/"
depends-on = ["_unzip_chair_data"]
outputs = ["data/chair/chair.ply"]

[tool.pixi.tasks._download_room_ply]
cmd = "test -f data/room/splat-bedroom.ply || hf download pablovela5620/supersplat-example splat-bedroom.ply --repo-type dataset --local-dir data/room/"
outputs = ["data/room/splat-bedroom.ply"]

[tool.pixi.tasks.log-chair]
cmd = "python tools/view_splat_with_cams.py --rr-config.executable-name rerun-gs-viewer"
depends-on = ["_download_chair_ply"]

[tool.pixi.tasks.log-room]
cmd = "python tools/view_any_splat.py --rr-config.executable-name rerun-gs-viewer --ply-path data/room/splat-bedroom.ply"
depends-on = ["_download_room_ply"]


[tool.pixi.feature.dev.dependencies]
pytest = ">=8.0.0,<9"
hypothesis = ">=6.0.0,<7"
beartype = ">=0.20"
pyrefly = ">=0.34.0,<0.35"
ruff = "*"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
